--- a/Examples/IPlugEffect/projects/IPlugEffect-vst2.vcxproj
+++ b/Examples/IPlugEffect/projects/IPlugEffect-vst2.vcxproj
@@ -442,7 +442,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\resources\IPlugEffect.rc" />
+    <ResourceCompile Include="..\resources\main.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
