--- a/Examples/IPlugEffect/projects/IPlugEffect-vst3.vcxproj
+++ b/Examples/IPlugEffect/projects/IPlugEffect-vst3.vcxproj
@@ -555,7 +555,7 @@
     <None Include="..\..\..\VST3_SDK\public.sdk\source\main\winexport.def" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\resources\IPlugEffect.rc" />
+    <ResourceCompile Include="..\resources\main.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
