--- a/Examples/IPlugEffect/projects/IPlugEffect-vst3.vcxproj.filters
+++ b/Examples/IPlugEffect/projects/IPlugEffect-vst3.vcxproj.filters
@@ -535,7 +535,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\resources\IPlugEffect.rc">
+    <ResourceCompile Include="..\resources\main.rc">
       <Filter>resources</Filter>
     </ResourceCompile>
   </ItemGroup>
