build on linux again

--- a/Examples/IGraphicsTest/Makefile
+++ b/Examples/IGraphicsTest/Makefile
@@ -2,13 +2,16 @@
 
 APP=IGraphicsTest
 
-IPLUG_PATH = ../../IPlug
-WDL_PATH = ../../WDL
+ROOT = ../..
+IPLUG_PATH = $(ROOT)/IPlug
+WDL_PATH = $(ROOT)/WDL
 SWELL_PATH = $(WDL_PATH)/swell
 IGRAPHICS_PATH = $(IPLUG_PATH)/IGraphics
 SWELL_PATH = $(WDL_PATH)/swell
 LICE_PATH = $(WDL_PATH)/lice
-NANOSVG_PATH = $(IGRAPHICS_PATH)/NanoSVG
+DEPS_PATH = $(ROOT)/Dependencies
+IGRAPHICS_DEPS_PATH = $(DEPS_PATH)/IGraphics
+NANOSVG_PATH = $(IGRAPHICS_DEPS_PATH)/NanoSVG/src
 
 IPLUG_INC_PATHS = -I$(IPLUG_PATH) -I$(WDL_PATH) -I$(SWELL_PATH)
 IGRAPHICS_INC_PATHS = -I$(IGRAPHICS_PATH) -I$(NANOSVG_PATH)
