--- a/common.props
+++ b/common.props
@@ -14,10 +14,10 @@
     <NANOVG_PATH>$(IGRAPHICS_DEPS_PATH)\NanoVG\src</NANOVG_PATH>
     <NANOSVG_PATH>$(IGRAPHICS_DEPS_PATH)\NanoSVG\src</NANOSVG_PATH>
     <AGG_PATH>$(IGRAPHICS_DEPS_PATH)\AGG</AGG_PATH>
-    <VST_SDK>$(SolutionDir)..\..\VST_SDK</VST_SDK>
-    <VST3_SDK>$(SolutionDir)..\..\VST3_SDK</VST3_SDK>
+    <VST_SDK>$(IPLUG_DEPS_PATH)\VST2_SDK</VST_SDK>
+    <VST3_SDK>$(IPLUG_DEPS_PATH)\VST3_SDK</VST3_SDK>
     <ASIO_SDK>$(IPLUG_DEPS_PATH)\RTAudio\include</ASIO_SDK>
-    <AAX_SDK>$(SolutionDir)..\..\AAX_SDK</AAX_SDK>
+    <AAX_SDK>$(IPLUG_DEPS_PATH)\AAX_SDK</AAX_SDK>
     <VST2_32_HOST_PATH>$(ProgramFiles)\REAPER\reaper.exe</VST2_32_HOST_PATH>
     <VST2_64_HOST_PATH>$(ProgramW6432)\REAPER (x64)\reaper.exe</VST2_64_HOST_PATH>
     <VST3_32_HOST_PATH>$(ProgramFiles)\Steinberg\VST3PluginTestHost\VST3PluginTestHost.exe</VST3_32_HOST_PATH>
